GH-2445 [Feature] AI开发智能重构 #2449